# LocalDeck

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  justfile  package-lock.json  package.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/lib/localdeck/: db.ts  markdown.ts  model.spec.ts  model.ts  repository.spec.ts  repository.ts  types.ts
src/lib/localdeck/board-file/: boardArchive.spec.ts  boardArchiveConstants.ts  boardArchiveTypes.ts  exportBoardArchive.ts  importBoardArchive.ts  validateBoardArchive.ts
src/routes/: +page.svelte  layout.css
