[package]
name = "LocalDeck"
version = "0.3.1-CA"
description = "Kanban. Local. Secure. Private."
authors = ["Anthony Nunez"]
license = "GNU General Public License v3.0"
repository = "https://github.com/CafecitoExpress95/LocalDeck"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-log = "2"
